@@ -18,7 +18,7 @@ class DefaultCriterionApplier(CriterionApplier):
         tag_count = db.con.execute("select count() from tags").fetchone()[0]
         if len(criterion._tag_ids_active) == tag_count:
             db.con.execute("update cards set active=1")
-        else:     
+        else:
             # Turn off everything.
             db.con.execute("update cards set active=0")
             # Turn on active tags.
@@ -30,22 +30,22 @@ class DefaultCriterionApplier(CriterionApplier):
                 args.append(_tag_id)
             command = command.rsplit(",", 1)[0] + "))"
             if criterion._tag_ids_active:
-                db.con.execute(command, args)                
+                db.con.execute(command, args)
         # Turn off inactive card types and views.
         command = "update cards set active=0 where "
-        args = []        
+        args = []
         for card_type_id, fact_view_id in \
                 criterion.deactivated_card_type_fact_view_ids:
             command += "(cards.fact_view_id=? and cards.card_type_id=?)"
             command += " or "
-            args.append(fact_view_id)  
-            args.append(card_type_id)          
+            args.append(fact_view_id)
+            args.append(card_type_id)
         command = command.rsplit("or ", 1)[0]
         if criterion.deactivated_card_type_fact_view_ids:
             db.con.execute(command, args)
         # Turn off forbidden tags.
         command = """update cards set active=0 where _id in (select _card_id
-            from tags_for_card where _tag_id in ("""       
+            from tags_for_card where _tag_id in ("""
         args = []
         for _tag_id in criterion._tag_ids_forbidden:
             command += "?,"
